Added new logic
